# FoundryFrontierWorkshop

./: .env.example  .gitignore  01_data_exploration.py  02_pattern_detection.py  03_cross_reference_analysis.py  04_fraud_ring_investigation.py  05_evaluation_framework.py  06_observability_dashboard.py  LLM_WALKTHROUGH.md  README.md  deck.md  pyproject.toml  requirements.txt  run_all.ps1  run_all.sh
Voice_CUA/: .env.example  README.md  requirements.txt
Voice_CUA/01_cua_basics/: run_cua_direct.py
Voice_CUA/02_voice_live_intro/: voice_live_basic.py
Voice_CUA/03_voice_with_functions/: voice_functions.py
Voice_CUA/04_voice_cua_bridge/: voice_cua_bridge.py
Voice_CUA/05_full_system/: voice_cua_operator.py
Voice_CUA/shared/: audio_helpers.py  cua_client.py  resource_helpers.py
agents/: .env.example  01_foundry_agent_setup.py  02_maf_first_agent.py  03_foundry_code_analysis.py  04_maf_multi_turn_investigation.py  05_maf_workflow_orchestration.py  06_evaluation.py  README.md  requirements.txt
agents/utils/: fraud_tools.py
computer-use/: cua.py  docker_c.py  local_computer.py
computer-use/shadowbox/: .env.example  __init__.py  __main__.py  cua.py  docker_c.py  pyproject.toml  run.py  run.sh  run_logger.py  shadowbox.py  shadowboxer.py
data/: generate_synthetic_data.py  module_05_evaluation.json
demo/: shared.py  streamlit_agents.py  streamlit_llm.py  streamlit_search_rag.py  streamlit_voice_cua.py
llm/: 01_data_exploration.py  02_pattern_detection.py  03_cross_reference_analysis.py  04_fraud_ring_investigation.py  05_evaluation_framework.py  06_observability_dashboard.py  README.md
search_rag/: .env.example  01_create_analyzer.py  02_analyze_documents.py  03_build_search_index.py  04_agent_investigation.py  05_evaluation.py  requirements.txt
search_rag/data/: generate_documents.py
tests/: test_workshop.py
utils/: auth.py  azure_client.py  telemetry.py
